<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/addItemActivity"
    android:background="@color/design_default_color_background"
    android:layout_height="match_parent"
    tools:context=".view.ui.AddMessageActivity">

    <Spinner
        android:id="@+id/spinner_encryption_type"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/caesar_key"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/item_key"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner_encryption_type"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_encryption_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plain_text"
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/enter_your_message"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/encrypt"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/enter_key"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/encrypt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/button_encrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/decrypt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_decrypt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrypt"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>