<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/homeFragment"
    android:layout_height="match_parent"
    tools:context=".view.ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/encryptedMessage"
            android:layout_width="300dp"
            android:scrollbars="vertical"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_text"
            android:padding="10dp"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptedMessageView" />

        <TextView
            android:id="@+id/encryptedMessageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/encrypted"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeView" />

        <TextView
            android:id="@+id/welcomeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/welcome"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/key"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/encryptedMessage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/encryption_key"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>