<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_algo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/item_type"
            android:layout_marginStart="12dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/message"
            android:fontFamily="@font/comfortaa"
            android:text="@string/algorithm"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_key"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/item_algo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/message"
            android:fontFamily="@font/comfortaa"
            android:text="@string/item_key"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_type"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/message"
            android:fontFamily="@font/comfortaa"
            android:text="@string/type"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/item_type"
            android:fontFamily="@font/comfortaa"
            android:textColor="#1098FF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/algo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/type"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"            android:layout_toEndOf="@+id/item_algo"
            android:fontFamily="@font/comfortaa"
            android:textColor="#1098FF"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/key"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/item_algo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/item_key"
            android:fontFamily="@font/comfortaa"
            android:textColor="#1098FF"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>